# mlab-brightmachines

./: .gitignore  README.md  requirements.txt  setup.cfg
pick_place/criterions/: __init__.py  scnn_loss.py
pick_place/datasets/: __init__.py  image_position_dataset.py
pick_place/models/: __init__.py  resnet.py  scnn.py
pick_place/notebooks/: demo.ipynb  dino.ipynb
pick_place/utils/: configs.py
