[metadata]
name = mlab_brightmachines
version = 1.0
author = ML@B
author_email = prabhune@berkeley.edu
description = Collaboration between ML@B and Bright Machines for pick and place
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:

[options.packages.find]
include = pick_place